Small changes applied
